--- a/blog-app/blog-app/pom.xml
+++ b/blog-app/blog-app/pom.xml
@@ -97,6 +97,29 @@
 			<version>2.3.1</version>
 		</dependency>
 
+		<!--		Swagger		-->
+
+		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-boot-starter -->
+<!--		<dependency>-->
+<!--			<groupId>io.springfox</groupId>-->
+<!--			<artifactId>springfox-boot-starter</artifactId>-->
+<!--			<version>3.0.0</version>-->
+<!--		</dependency>-->
+
+<!--		&lt;!&ndash; https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.springdoc</groupId>-->
+<!--			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>-->
+<!--			<version>2.3.0</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>io.swagger.core.v3</groupId>-->
+<!--			<artifactId>swagger-annotations</artifactId>-->
+<!--			<version>2.2.16</version>-->
+<!--		</dependency>-->
+
+
 
 
 
